CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_COND_c__x.object
<CustomObject>
    <externalDataSource>OEC_Provider_Datasource</externalDataSource>
    <externalName>OEC_Condition__c</externalName>
    <fields>
        <fullName>CDE_STATUS__c</fullName>
        <externalDeveloperName>OEC_Status__c</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <externalDeveloperName>OEC_ProgramName__c</externalDeveloperName>
        <label>Provider ID</label>
        <length>20</length>
        <referenceTargetField>T_CHATS_PROVR_STATUS__c.Program_Name__c</referenceTargetField>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Provider Conditions (Provider ID)</relationshipLabel>
        <relationshipName>Provider_Conditions</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>NAM_COND__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Condition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <externalDeveloperName>OEC_ProgramName__c</externalDeveloperName>
        <label>Program Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXT_COND__c</fullName>
        <externalDeveloperName>OEC_ConditionDescription__c</externalDeveloperName>
        <label>Condition Description</label>
        <type>TextArea</type>
    </fields>
    <label>Provider Condition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>NAM_COND__c</columns>
        <columns>DisplayUrl</columns>
        <columns>TXT_COND__c</columns>
        <columns>IDN_PROVR__c</columns>
        <columns>CDE_STATUS__c</columns>
        <columns>Program_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Provider Conditions</pluralLabel>
</CustomObject>