CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_COND_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>NAM_COND__c</columns>
    <columns>DisplayUrl</columns>
    <columns>TXT_COND__c</columns>
    <columns>IDN_PROVR__c</columns>
    <columns>CDE_STATUS__c</columns>
    <columns>Program_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>